// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`css Nested functional styles 1`] = `
".jss-glamor-5306129458133, [data-jss-glamor-5306129458133]: {
  color: gray;
  position: relative;
}
.jss-5306129458133:hover, [data-jss-5306129458133]:hover {
  color: peachpuff;
}
.jss-5306129458133:hover, [data-jss-5306129458133]:hover {
  color: peachpuff;
}
.jss-glamor-2388246972218, [data-jss-glamor-2388246972218]: {
  color: peachpuff;
  position: relative;
}
.jss-2388246972218:hover, [data-jss-2388246972218]:hover {
  color: peachpuff;
}
.jss-2388246972218:hover, [data-jss-2388246972218]:hover {
  color: peachpuff;
}
.jss-2388246972218::before, [data-jss-2388246972218]:before {
  top: 10px;
}"
`;

exports[`css Nested functional styles 2`] = `
".jss-glamor-5306129458133, [data-jss-glamor-5306129458133]: {
  color: gray;
  position: relative;
}
.jss-5306129458133:hover, [data-jss-5306129458133]:hover {
  color: peachpuff;
}
.jss-5306129458133:hover, [data-jss-5306129458133]:hover {
  color: peachpuff;
}
.jss-glamor-2388246972218, [data-jss-glamor-2388246972218]: {
  color: peachpuff;
  position: relative;
}
.jss-2388246972218:hover, [data-jss-2388246972218]:hover {
  color: peachpuff;
}
.jss-2388246972218:hover, [data-jss-2388246972218]:hover {
  color: peachpuff;
}
.jss-2388246972218::before, [data-jss-2388246972218]:before {
  top: 10px;
}
.jss-glamor-2919814881976, [data-jss-glamor-2919814881976]: {
  color: gray;
  position: relative;
}
.jss-glamor-14276384371177, [data-jss-glamor-14276384371177]: {
  color: gray;
  position: relative;
}"
`;

exports[`css Simple styles 1`] = `
".jss-glamor-727942878756, [data-jss-glamor-727942878756]: {
  width: 100px;
  height: 100px;
}"
`;

exports[`css Keyframes work without collision 1`] = `
"@keyframes jss-keyframes-fade-0 {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes jss-keyframes-fade-1 {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes jss-keyframes-animation-2 {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes jss-keyframes-animation-3 {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}"
`;

exports[`css Falsy values 1`] = `
".jss-1588077681765:after, [data-jss-1588077681765]:after {
  height: 100px;
}"
`;

exports[`css Complex styles 1`] = `
".jss-glamor-13599647748142, [data-jss-glamor-13599647748142]: {
  font-weight: bold;
}
.jss-glamor-5941958004277, [data-jss-glamor-5941958004277]: {
  color: papayawhip;
  width: 350px;
  border: 1px solid mediumaquamarine;
  height: 150px;
  font-weight: bold;
  border-radius: 50%;
}
.jss-5941958004277:hover, [data-jss-5941958004277]:hover {
  color: orchid;
}
.jss-5941958004277@media (min-width: 800px), [data-jss-5941958004277@media (min-width]: 800px) {
  background: peachpuff;
}"
`;

exports[`css Overwrite styles 1`] = `
".jss-glamor-3516438609568, [data-jss-glamor-3516438609568]: {
  color: mediumaquamarine;
}
.jss-glamor-5488174686184, [data-jss-glamor-5488174686184]: {
  color: lightcoral;
}
.jss-glamor-9688995239998, [data-jss-glamor-9688995239998]: {
  color: thistle;
}
.jss-glamor-14545500314083, [data-jss-glamor-14545500314083]: {
  color: thistle;
}"
`;

exports[`css Multiple styles 1`] = `
[
  "data-jss-glamor-4703428728319",
  "data-jss-glamor-9803402724494",
]
`;
